<resources>
    <string name="app_name">My Application</string>
    <string name="Uname">Username</string>
    <string name="Appname">veggies</string>
    <string name="Pword">Password</string>
    <string name="Signbtn">Sign in</string>
    <string name="Forgotpword">Forgot Password</string>
    <string name="trouble">Trouble logging in</string>
    <string name="troublephone">0112751684</string>
    <string name="Appname2">Veggies</string>
    <string name="profile">My Profile</string>
    <string name="name">A.K.I Perera</string>
    <string name="name1">*Name</string>
    <string name="nm">A.K.I Perera</string>
    <string name="adrss">*Address</string>
    <string name="adr1">No.210,Homagama,Pitipana.</string>
    <string name="phn">*Phone</string>
    <string name="phne">0xxxxxxxxx</string>
    <string name="emil">*Email</string>
    <string name="emil2">Veggies@samplegmail.com</string>
    <string name="nic1">*NIC</string>
    <string name="nic2">xxxxxxxxxxxx</string>
    <string name="editp">EDIT  PROFILE</string>
    <string name="deletepro">DELETE MY PROFILE</string>
    <string name="Appname3">Veggies</string>
    <string name="editpro">Edit My Profile</string>
    <string name="ename1">*Name</string>
    <string name="ename2">A.K.I Perera</string>
    <string name="addr1">*Address</string>
    <string name="addr2">No.210,Homagama,Pitipana.</string>
    <string name="pho1">*Phone</string>
    <string name="pho2">0xxxxxxxxx</string>
    <string name="mail1">*Email</string>
    <string name="mail2">Veggies@samplegmail.com</string>
    <string name="nid1">*NIC</string>
    <string name="nid2">xxxxxxxxxxxx</string>
    <string name="edt1">EDIT</string>
    <string name="edt2">EDIT</string>
    <string name="edit3">EDIT</string>
    <string name="edt4">EDIT</string>
    <string name="edt5">EDIT</string>
    <string name="sv1">SAVE</string>
    <string name="Appname4">Veggies</string>
    <string name="dlt1">"Are you sure you want to delete "</string>
    <string name="dlt2">your account.?</string>
    <string name="yesbtn">YES</string>
    <string name="nobtn">NO</string>
    <string name="profilecreate">Create new profile</string>
    <string name="nameuser">*Name(use as username)</string>
    <string name="entername">enter your name</string>
    <string name="enteraddress">*Address</string>
    <string name="enter_address">enter your address</string>
    <string name="phoneenter">*Phone</string>
    <string name="enternumber">enter your phone number</string>
    <string name="enteremail">*Email</string>
    <string name="enter_email">enter your email</string>
    <string name="enternic">*NIC</string>
    <string name="enterNIC">enter your NIC</string>
    <string name="profilecreatebutton">CREATE PROFILE</string>
    <string name="cancelpro">CANCEL</string>
    <string name="createneppro">CREATE NEW PROFILE</string>
    <string name="msg">Your profile has been</string>
    <string name="yourpromsg">Your profile has been</string>
    <string name="succmsg">Successfully created!</string>
    <string name="updatemsg">"Your profile details has been "</string>
    <string name="updtmsg">Successfully Updated!</string>
    <string name="deletemsg">Successfully Deleted!</string>
    <string name="gostore">GO TO STORE</string>
    <string name="num">0112456869</string>
</resources>